--- a/templates/submit.html
+++ b/templates/submit.html
@@ -13,7 +13,7 @@
 
 
 {% block content %}
-    <h1>Submit Article</h1>
+    <h1>Submit a Topic</h1>
     <br>
     <form action="" method="post">
         {{ xsrf_form_html() }}
