--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                                 <a href="/inbox">inbox</a>
                             {% end %}
                             &nbsp;|&nbsp;
-                            <a href="/users/{{ current_user.name }}">{{ current_user.name }} ☯ {{ current_user.karma }}</a>
+                            <a href="/account">{{ current_user.name }} ☯ {{ current_user.karma }}</a>
                              &nbsp;|&nbsp;
                             <a href="/sign_out">sign out</a>
                         </span>
