--- a/templates/users/topics.html
+++ b/templates/users/topics.html
@@ -5,33 +5,7 @@
     <h1>{{ user.name.capitalize() }}'s Topics</h1>
     <br>
     {% for topic in user.topics %}
-        <div class="topic_listing">
-            <h2>
-                <a href="{% if topic.link %}{{ topic.link }}{% else %}/{{ topic.id }}{% end %}">{{ escape(topic.title) }}</a>
-            </h2>
-            <p class="comment_info">
-                {% if topic.points == 1 %}
-                    1 point
-                {% else %}
-                    {{ topic.points }} points
-                {% end %}
-                
-                {% if topic.author %}
-                    by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>
-                {% else %}
-                    by anonymous
-                {% end %}
-                
-                {{ locale.format_date(topic.created) }},
-                <a href="/{{ topic.id }}">
-                    {% if topic.n_comments == 1 %}
-                        1 comment
-                    {% else %}
-                        {{ topic.n_comments }} comments
-                    {% end %}
-                </a>
-            </p>
-        </div>
+        {% include "../_topic_listing.html" %}
     {% end %}
 {% end %}
 
