--- a/templates/_comment.html
+++ b/templates/_comment.html
@@ -27,6 +27,9 @@
                 {{ relative_date(comment.created) }}
                 |
                 <a href="#c{{ comment.id }}">link</a>
+                {% if comment.can_edit(current_user) %}
+                    | <a href="/{{ comment.id }}/comment_edit">edit</a>
+                {% end %}
             </p>
             {{ markdown(comment.text) }}
             <a data-id="{{ comment.id }}" class="reply">reply</a>
