--- a/templates/topic.html
+++ b/templates/topic.html
@@ -23,8 +23,9 @@
         .topic { padding-bottom: 3.5em; }
         .topic > .body { padding: 1em 0; }
         #reply_box { display: none; }
+        #reply_box .body { width: 500px; }
         #reply_box textarea {
-            width: 500px;
+            width: 100%;
             height: 100px;
         }
     </style>
@@ -58,6 +59,10 @@
             {% end %}
             
             {{ relative_date(topic.created) }}
+            
+            {% if topic.can_edit(current_user) %}
+                | <a href="/{{ topic.id }}/edit">edit</a>
+            {% end %}
         </p>
         <div class="body">
             {% if vimeo_id %}
@@ -87,6 +92,7 @@
                 {{ xsrf_form_html() }}
                 <input type="hidden" id="reply_to" name="reply_to">
                 <textarea name="text"></textarea>
+                <a style="float:right" target="_blank" href="http://daringfireball.net/projects/markdown/basics">markdown help</a>
                 <input type="submit" value="Reply">
             </form>
         </div>
