--- a/templates/community_edit.html
+++ b/templates/community_edit.html
@@ -19,7 +19,11 @@
     <form action="{{ upload_url }}" method="post" enctype="multipart/form-data">
         {{ xsrf_form_html() }}
         <input type="file" name="file">
-        <br>
+        <input type="submit" value="Update that shit!">
+    </form>
+    
+    <form action="/community/edit" method="post">
+        {{ xsrf_form_html() }}
         <label for="title">Title</label>
         <input type="text" id="title" name="title" value="{{ escape(current_site.title) }}">
         <label for="tagline">Tagline</label>
