--- a/templates/comment_edit.html
+++ b/templates/comment_edit.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 
+{% block title %}
+    <title>{{ escape(current_site.title) }} | Edit Comment</title>
+{% end %}
+
+
 {% block style %}
     <style>
         textarea {
