--- a/templates/community.html
+++ b/templates/community.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 
+{% block title %}
+    <title>{{ escape(current_site.title) }} | Community</title>
+{% end %}
+
+
 {% block style %}
     <style>
         .user { margin-top: 2em; }
