--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 
+{% block title %}
+    <title>{{ escape(current_site.title) }} | Inbox</title>
+{% end %}
+
+
 {% block style %}
     <style>
         
