--- a/templates/submit.html
+++ b/templates/submit.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 
+{% block title %}
+    <title>{{ escape(current_site.title) }} | Submit a Topic</title>
+{% end %}
+
+
 {% block style %}
     <style>
         #title, #link { width: 400px; }
