--- a/templates/topic.html
+++ b/templates/topic.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 
+{% block title %}
+    <title>{{ escape(current_site.title) }} | {{ escape(topic.title) }}</title>
+{% end %}
+
+
 {% block script %}
     <script>
         (function($){
