--- a/templates/users/comments.html
+++ b/templates/users/comments.html
@@ -1,6 +1,11 @@
 {% extends "../base.html" %}
 
 
+{% block title %}
+    <title>{{ escape(current_site.title) }} | {{ user.name.capitalize() }}'s Comments</title>
+{% end %}
+
+
 {% block content %}
     <h1>{{ user.name.capitalize() }}'s Comments</h1>
     <br>
