--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,7 @@ body {
 a { color: #41a3c2; }
 a:hover { color: #e0115f; }
 
-b { font-weight: bold; }
+b, strong { font-weight: bold; }
 em { font-style: italic; }
 p { margin-bottom: 1.2em; }
 
@@ -26,11 +26,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
 }
 
 h1 { font-size: 1.8em; }
-h2, h3 {
-    color: #202020;
-}
-h2 { font-size: 1.5em; }
-h3 { font-size: 1.2em; }
+h2, h3 { color: #202020; }
+h2 { font-size: 1.4em; }
+h3 { font-size: 1.1em; }
 
 label { color: #6d6c6c; }
 blockquote, pre, code {
