--- a/templates/account.html
+++ b/templates/account.html
@@ -9,14 +9,8 @@
 {% block style %}
     <style>
         .gravatar { float: left; }
-        #info {
-            padding: 1em;
-            margin-bottom: 1em;
-        }
-        #info .body {
-            margin-left: 120px;
-        }
-        
+        #info { margin: 1em 0; }
+        #info .body { margin-left: 120px; }
         #password, #email { width: 250px; }
         #about { width: 500px; height: 150px; }
     </style>
