--- a/templates/users/user.html
+++ b/templates/users/user.html
@@ -9,16 +9,8 @@
 {% block style %}
     <style>
         .gravatar { float: left; }
-        #info {
-            padding: 1em;
-            margin-bottom: 1em;
-        }
-        #info .body {
-            margin-left: 120px;
-        }
-        #edit_account td {
-            padding: 0.5em;
-        }
+        #info { margin: 1em 0; }
+        #info .body { margin-left: 120px; }
     </style>
 {% end %}
 
