fix front page voting and add admin voting

--- a/templates/_comment.html
+++ b/templates/_comment.html
@@ -13,6 +13,9 @@
                 {% elif comment.can_vote_up(current_user) %}
                     <a class="vote_up" href="/vote?way=up&amp;comment_id={{ comment.id }}">+</a>
                 {% end %}
+                {% if comment.can_vote_down(current_user) %}
+                    <a class="vote_down" href="/vote?way=down&amp;comment_id={{ comment.id }}">-</a>
+                {% end %}
                 
                 <span class="points">
                     {{ comment.points }} {{ 'point' if comment.points in (1, -1) else 'points' }}
