--- a/templates/_topic_listing.html
+++ b/templates/_topic_listing.html
@@ -13,6 +13,9 @@
         {% elif topic.can_vote_up(current_user) %}
             <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.id }}">+</a>
         {% end %}
+        {% if topic.can_vote_down(current_user) %}
+            <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.id }}">-</a>
+        {% end %}
         
         <span class="points">
             {{ topic.points }} {{ 'point' if topic.points in (1, -1) else 'points' }}
