--- a/templates/topic.html
+++ b/templates/topic.html
@@ -50,7 +50,10 @@
             {% if not current_user %}
                 <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
             {% elif topic.can_vote_up(current_user) %}
-                <a class="vote_up" href="/{{ topic.id }}">+</a>
+                <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.id }}">+</a>
+            {% end %}
+            {% if topic.can_vote_down(current_user) %}
+                <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.id }}">-</a>
             {% end %}
             
             <span class="points">
