link to community guidelines on submit page

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -29,6 +29,9 @@
 {% block content %}
     <h1>Submit a Topic</h1>
     <br>
+    <p>
+        First time posting? Read the <a href="/community">Community Guidelines</a>.
+    </p>
     <form action="" method="post">
         {{ xsrf_form_html() }}
         <label for="title">Title</label>
