wikiness is stable

--- a/static/style.css
+++ b/static/style.css
@@ -45,7 +45,7 @@ input[type="password"],
 textarea {
     padding: 0.2em;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 0.5em;
 }
 
 
