--- a/templates/inbox.html
+++ b/templates/inbox.html
@@ -47,7 +47,7 @@
                         replied to you 
                         {{ relative_date (comment.created) }}
                         |
-                        <a href="/{{ comment.topic.key_name }}#c{{ comment.id }}">link</a>
+                        <a href="/{{ comment.topic.name }}#c{{ comment.id }}">link</a>
                     </p>
                     {{ markdown(comment.text) }}
                 </div>
