--- a/templates/_topic_listing.html
+++ b/templates/_topic_listing.html
@@ -4,17 +4,17 @@
             <a href="{{ topic.link }}">{{ escape(topic.title) }}</a>
             <span class="domain">({{ topic.link_domain }})</span>
         {% else %}
-            <a href="/{{ topic.key_name }}">{{ escape(topic.title) }}</a>
+            <a href="/{{ topic.name }}">{{ escape(topic.title) }}</a>
         {% end %}
     </h2>
     <p class="comment_info">
         {% if not current_user %}
             <a class="vote_up sign_in" href="/sign_in?message=vote">+</a>
         {% elif topic.can_vote_up(current_user) %}
-            <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.key_name }}">+</a>
+            <a class="vote_up" href="/vote?way=up&amp;topic_id={{ topic.name }}">+</a>
         {% end %}
         {% if topic.can_vote_down(current_user) %}
-            <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.key_name }}">-</a>
+            <a class="vote_down" href="/vote?way=down&amp;topic_id={{ topic.name }}">-</a>
         {% end %}
         
         <span class="points">
@@ -29,7 +29,7 @@
         
         {{ relative_date(topic.created) }}
         &nbsp;|&nbsp;
-        <a href="/{{ topic.key_name }}">
+        <a href="/{{ topic.name }}">
             {% if not topic.n_comments %}
                 discuss
             {% elif topic.n_comments == 1 %}
