--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,7 @@ textarea {
     z-index: -1;
 }
 #body {
-    padding: 4em 0;
+    padding-bottom: 4em;
 }
 #main {
     margin: auto;
@@ -66,32 +66,41 @@ textarea {
 }
 
 #header {
+    color: #275f6d;
+    padding: 0.5em;
     margin-bottom: 3em;
+    background-color: #419ab5;
+    border-bottom: 1px solid #3a8aa3;
+    border-left: 4px solid #3a8aa3;
+}
+#header .container {
+    max-width: 900px;
+    margin: auto;
 }
 #header #logo {
-    text-align: center;
+    float: left;
 }
 #header #logo a {
-    font-size: 3.5em;
-    padding: 0.1em 0.6em;
+    font-size: 1.5em;
+    padding: 0.1em 0;
     line-height: 1;
     text-decoration: none;
-    background-color: #419ab5;
     color: white;
-    border: 1px solid #3a8aa3;
-    border-left: 4px solid #3a8aa3;
-    box-shadow: 0px 0px 40px #dddddd;
-    -webkit-box-shadow: 0px 0px 40px #dddddd;
-    -moz-box-shadow: 0px 0px 40px #dddddd;
     text-shadow: rgba(0, 0, 0, 0.2) 1px 1px 0px;
 }
 
 #header #nav {
-    margin-top: 2em;
-    text-align: center;
+    float: right;
 }
 #header #nav .item {
     margin: 0 10px;
+}
+#header #nav a {
+    text-decoration: none;
+    color: white;
+}
+#header #nav a:hover {
+    text-decoration: underline;
 }
 #header #nav a.inbox {
     border-radius: 4px;
