--- a/templates/community_edit.html
+++ b/templates/community_edit.html
@@ -25,12 +25,14 @@
         <input type="submit" value="Upload">
     </form>
     
-    <form action="/community/edit" method="post">
+    <form action="/community_edit" method="post">
         {{ xsrf_form_html() }}
         <label for="title">Title</label>
         <input type="text" id="title" name="title" value="{{ escape(current_site.title) }}">
         <label for="tagline">Tagline</label>
         <input type="text" id="tagline" name="tagline" value="{{ escape(current_site.tagline) }}">
+        <label for="about">About</label>
+        <textarea id="about" name="about">{{ escape(current_site.about) }}</textarea>
         <input type="submit" value="Update!">
     </form>
 {% end %}
