submit error msgs

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
             background-color: #EEE;
             margin-bottom: 2em;
             border-radius: 7px;
+            border: 1px solid #DDD;
         }
         #about p {
             margin-bottom: 0;
