style tweaks and topic edit bug fix

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -10,12 +10,14 @@
     <style>
         #title, #link { width: 550px; }
         textarea {
-            height: 200px;
-            width: 550px;
+            height: 300px;
+            width: 650px;
         }
         #slug {
             display: inline; 
             width: 300px;
+            border: none;
+            background: #eee;
         }
         .slug { font-size: 0.9em; color: grey; }
     </style>
