--- a/static/style.css
+++ b/static/style.css
@@ -123,7 +123,7 @@ textarea {
 #message {
     color: #FFF;
     text-align: center;
-    line-height: 2em;
+    padding: 0.5em;
     width: 500px;
     margin: auto;
     margin-bottom: 2em;
