added edit versions

--- a/templates/topic.html
+++ b/templates/topic.html
@@ -57,13 +57,20 @@
             </span>
             
             {% if topic.author %}
-                by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}</a>
+                by <a href="/users/{{ topic.author.name }}">{{ topic.author.name }}
+                </a>{% for editor in topic.editors %}
+                    , <a href="/users/{{ editor }}">{{ editor }}</a>
+                {% end %}
             {% else %}
                 by anonymous
             {% end %}
             
             {{ relative_date(topic.created) }}
-            
+            {% if topic.version > 1 %}
+                | <a href="/{{ topic.name }}/versions">version {{ topic.version }}</a>
+            {% else %}
+                | version 1
+            {% end %}
             | <a href="/{{ topic.name }}/edit">edit</a>
         </p>
         <div class="body">
